--- a/catalog.html
+++ b/catalog.html
@@ -15,49 +15,40 @@
           <li><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
-      <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="#" height="#" alt="Логотип SEDONA">
+      <a class="main-header-logo" href="index.html">
+        <img src="http://placehold.it/138x71" width="138" height="71" alt="Логотип SEDONA">
       </a>
     </header>
     <main>
-    <section class="hotel-form"
+      <section class="hotel-form">
     <!--форма-->
-    </section>
+      </section>
     <section class="hotel-info">
-    <h2 class="visually-hidden">Список найденных отелей</h2>
+      <h2 class="visually-hidden">Список найденных отелей</h2>
       <ul class="hotels-list">
         <li class="catalog-item">
-          <h3>
-            <a href="hotel-page.html">
-            <img class="hotel-image" src="#" width="#" height="#" alt="Amara Resort & Spa">
-            <span class="hotel-name">Amara Resort & Spa</span>
-          </h3>
-          <b class="hotel-price">Гостиница от 4000 Р.</b>
+          <img class="hotel-image" src="http://placehold.it/135x90" width="135" height="90" alt="Amara Resort & Spa">
+          <p class="hotel-name"><a href="hotel-page.html">Amara Resort & Spa</a></p>
+          <p class="hotel-price">Гостиница от 4000 Р.</p>
           <a class="moreinfo-button" href="#">Подробнее</a>
           <a class="book-button" href="#">Забронировать</a>
-          <b class="hotel-rating">Рейтинг: 8,5</b>
+          <p class="hotel-rating">Рейтинг: 8,5</p>
         </li>
         <li class="catalog-item">
-          <h3>
-            <a href="hotel-page.html">
-            <img class="hotel-image" src="#" width="#" height="#" alt="Desert Quail Inn">
-            <span class="hotel-name">Desert Quail Inn</span>
-          </h3>
-          <b class="hotel-price">Гостиница от 3000 Р.</b>
+          <img class="hotel-image" src="http://placehold.it/135x90" width="135" height="90" alt="Desert Quail Inn">
+          <p class="hotel-name"><a href="hotel-page.html">Desert Quail Inn</a></p>
+          <p class="hotel-price">Гостиница от 3000 Р.</p>
           <a class="moreinfo-button" href="#">Подробнее</a>
           <a class="book-button" href="#">Забронировать</a>
-          <b class="hotel-rating">Рейтинг: 8,9</b>
+          <p class="hotel-rating">Рейтинг: 8,9</p>
         </li>
         <li class="catalog-item">
-          <h3>
-            <a href="hotel-page.html">
-            <img class="hotel-image" src="#" width="#" height="#" alt="Villas at Poco Diablo">
-            <span class="hotel-name">Villas at Poco Diablo</span>
-          </h3>
-          <b class="hotel-price">Гостиница от 2000 Р.</b>
+          <img class="hotel-image" src="http://placehold.it/135x90" width="135" height="90" alt="Villas at Poco Diablo">
+          <p class="hotel-name"><a href="hotel-page.html">Villas at Poco Diablo</a></p>
+          <p class="hotel-price">Гостиница от 2000 Р.</p>
           <a class="moreinfo-button" href="#">Подробнее</a>
           <a class="book-button" href="#">Забронировать</a>
-          <b class="hotel-rating">Рейтинг: 9,2</b>
+          <p class="hotel-rating">Рейтинг: 9,2</p>
         </li>
       </ul>
     </section>
@@ -75,7 +66,7 @@
       <p class="footer-copyright">
         <b>WEBSITE BY:</b>
         <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy-logo" width="" height="" alt="htmlacademy">
+          <img src="http://placehold.it/115x41" width="115" height="41" alt="htmlacademy">
         </a>
       </p>
     </footer>
