--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         </ul>
       </nav>
       <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="#" height="#" alt="Логотип SEDONA">
+        <img src="http://placehold.it/138x71" width="138" height="71" alt="Логотип SEDONA">
       </a>
     </header>
-    <!--основная часть-->
     <main class="container">
       <section class="main-section">
         <h1 class="visually-hidden">Информация о SEDONA</h1>
-        <h2 class="page-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+    <!--основная часть-->
+        <b class="sedona-info">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     <!--интерактивный элемент для следующих заданий-->
       </section>
-      <section class="hotel-booking">
-        <h2>Заинтересовались?</h2>
+        <section class="hotel-booking">
+        <b class="booking-title">Заинтересовались?</b>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
     <!--карта на JavaScript-->
       </section>
@@ -36,19 +36,19 @@
     <!--футер-->
     <footer class="main-footer">
       <p class="footer-hashtag">#VISITSEDONA</p>
-        <div class="footer-social">
-          <ul>
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
-          </ul>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
       </div>
-      <p class="footer-copyright">
-        <b>WEBSITE BY:</b>
-        <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy-logo" width="" height="" alt="htmlacademy">
-        </a>
-      </p>
+        <p class="footer-copyright">
+          <b>WEBSITE BY:</b>
+          <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="http://placehold.it/115x41" width="115" height="41" alt="htmlacademy">
+          </a>
+        </p>
     </footer>
     <!--popup окно-->
     <section class="popup-booking">
