Подключил контентные изображения и экспортировал из макета остальные
Экспортировал из макета все остальные изобржаниея, и контентные и декоративные и фоновые.

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
         </ul>
       </nav>
       <a class="main-header-logo" href="index.html">
-        <img src="http://placehold.it/138x71" width="138" height="71" alt="Логотип SEDONA">
+        <img src="img/logo.svg" width="138" height="71" alt="Логотип SEDONA">
       </a>
     </header>
     <main>
@@ -27,7 +27,7 @@
         <h2 class="visually-hidden">Список найденных отелей</h2>
         <ul class="hotels-list">
           <li class="catalog-item">
-            <img class="hotel-image" src="http://placehold.it/135x90" width="135" height="90" alt="Amara Resort & Spa">
+            <img class="hotel-image" src="img/hotel-1" width="135" height="90" alt="Amara Resort & Spa">
             <p class="hotel-name"><a href="hotel-page.html">Amara Resort & Spa</a></p>
             <p class="hotel-price">Гостиница от 4000 Р.</p>
             <a class="moreinfo-button" href="#">Подробнее</a>
@@ -35,7 +35,7 @@
             <p class="hotel-rating">Рейтинг: 8,5</p>
           </li>
           <li class="catalog-item">
-            <img class="hotel-image" src="http://placehold.it/135x90" width="135" height="90" alt="Desert Quail Inn">
+            <img class="hotel-image" src="img/hotel-2" width="135" height="90" alt="Desert Quail Inn">
             <p class="hotel-name"><a href="hotel-page.html">Desert Quail Inn</a></p>
             <p class="hotel-price">Гостиница от 3000 Р.</p>
             <a class="moreinfo-button" href="#">Подробнее</a>
@@ -43,7 +43,7 @@
             <p class="hotel-rating">Рейтинг: 8,9</p>
           </li>
           <li class="catalog-item">
-            <img class="hotel-image" src="http://placehold.it/135x90" width="135" height="90" alt="Villas at Poco Diablo">
+            <img class="hotel-image" src="img/hotel-3" width="135" height="90" alt="Villas at Poco Diablo">
             <p class="hotel-name"><a href="hotel-page.html">Villas at Poco Diablo</a></p>
             <p class="hotel-price">Гостиница от 2000 Р.</p>
             <a class="moreinfo-button" href="#">Подробнее</a>
@@ -66,7 +66,7 @@
       <p class="footer-copyright">
         <b>WEBSITE BY:</b>
         <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="http://placehold.it/115x41" width="115" height="41" alt="htmlacademy">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy">
         </a>
       </p>
     </footer>
