--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
       </nav>
       <a class="main-header-logo">
-        <img src="http://placehold.it/138x71" width="138" height="71" alt="Логотип SEDONA">
+        <img src="img/logo.svg" width="138" height="71" alt="Логотип SEDONA">
       </a>
     </header>
     <main class="container">
@@ -46,7 +46,7 @@
       <p class="footer-copyright">
         <b>WEBSITE BY:</b>
         <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="http://placehold.it/115x41" width="115" height="41" alt="htmlacademy">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy">
         </a>
       </p>
     </footer>
