--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
         <h2 class="visually-hidden">Список найденных отелей</h2>
         <ul class="hotels-list">
           <li class="catalog-item">
-            <img class="hotel-image" src="img/hotel-1" width="135" height="90" alt="Amara Resort & Spa">
+            <img class="hotel-image" src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
             <p class="hotel-name"><a href="hotel-page.html">Amara Resort & Spa</a></p>
             <p class="hotel-price">Гостиница от 4000 Р.</p>
             <a class="moreinfo-button" href="#">Подробнее</a>
@@ -35,7 +35,7 @@
             <p class="hotel-rating">Рейтинг: 8,5</p>
           </li>
           <li class="catalog-item">
-            <img class="hotel-image" src="img/hotel-2" width="135" height="90" alt="Desert Quail Inn">
+            <img class="hotel-image" src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn">
             <p class="hotel-name"><a href="hotel-page.html">Desert Quail Inn</a></p>
             <p class="hotel-price">Гостиница от 3000 Р.</p>
             <a class="moreinfo-button" href="#">Подробнее</a>
@@ -43,7 +43,7 @@
             <p class="hotel-rating">Рейтинг: 8,9</p>
           </li>
           <li class="catalog-item">
-            <img class="hotel-image" src="img/hotel-3" width="135" height="90" alt="Villas at Poco Diablo">
+            <img class="hotel-image" src="img/hotel-3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
             <p class="hotel-name"><a href="hotel-page.html">Villas at Poco Diablo</a></p>
             <p class="hotel-price">Гостиница от 2000 Р.</p>
             <a class="moreinfo-button" href="#">Подробнее</a>
