Сделал правки по a11y
в футере, в соцсетях
в каталоге на кнопках "забронировать" и "подробнее"

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <p class="footer-hashtag">#VISITSEDONA</p>
       <div class="footer-social">
         <ul>
-          <li><a class="social-button" href="#" aria-label="Ссылка на Вконтакте сервиса бронирования отелей">Вконтакте</a></li>
-          <li><a class="social-button" href="#" aria-label="Ссылка на Facebook сервиса бронирования отелей">Фейсбук</a></li>
-          <li><a class="social-button" href="#" aria-label="Ссылка на Инстаграм сервиса бронирования отелей">Инстаграм</a></li>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
         </ul>
       </div>
       <p class="footer-copyright">
