--- a/catalog.html
+++ b/catalog.html
@@ -30,24 +30,24 @@
             <img class="hotel-image" src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
             <p class="hotel-name"><a href="hotel-page.html">Amara Resort & Spa</a></p>
             <p class="hotel-price">Гостиница от 4000 Р.</p>
-            <a class="moreinfo-button" href="#" aria-label="Подробнее об отеле">Подробнее</a>
-            <a class="book-button" href="#" aria-label="Забронировать отель">Забронировать</a>
+            <a class="moreinfo-button" href="#">Подробнее</a>
+            <a class="book-button" href="#">Забронировать</a>
             <p class="hotel-rating">Рейтинг: 8,5</p>
           </li>
           <li class="catalog-item">
             <img class="hotel-image" src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn">
             <p class="hotel-name"><a href="hotel-page.html">Desert Quail Inn</a></p>
             <p class="hotel-price">Гостиница от 3000 Р.</p>
-            <a class="moreinfo-button" href="#" aria-label="Подробнее об отеле">Подробнее</a>
-            <a class="book-button" href="#" aria-label="Забронировать отель">Забронировать</a>
+            <a class="moreinfo-button" href="#">Подробнее</a>
+            <a class="book-button" href="#">Забронировать</a>
             <p class="hotel-rating">Рейтинг: 8,9</p>
           </li>
           <li class="catalog-item">
             <img class="hotel-image" src="img/hotel-3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
             <p class="hotel-name"><a href="hotel-page.html">Villas at Poco Diablo</a></p>
             <p class="hotel-price">Гостиница от 2000 Р.</p>
-            <a class="moreinfo-button" href="#" aria-label="Подробнее об отеле">Подробнее</a>
-            <a class="book-button" href="#" aria-label="Забронировать отель">Забронировать</a>
+            <a class="moreinfo-button" href="#">Подробнее</a>
+            <a class="book-button" href="#">Забронировать</a>
             <p class="hotel-rating">Рейтинг: 9,2</p>
           </li>
         </ul>
@@ -58,9 +58,9 @@
       <p class="footer-hashtag">#VISITSEDONA</p>
       <div class="footer-social">
         <ul>
-          <li><a class="social-button" href="#" aria-label="Ссылка на Вконтакте сервиса бронирования отелей">Вконтакте</a></li>
-          <li><a class="social-button" href="#" aria-label="Ссылка на Facebook сервиса бронирования отелей">Фейсбук</a></li>
-          <li><a class="social-button" href="#" aria-label="Ссылка на Инстаграм сервиса бронирования отелей">Инстаграм</a></li>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
         </ul>
       </div>
       <p class="footer-copyright">
