Добавил стили на обе страницы
Добавил стили на обе страницы, а также внес кое-какие коррективы в index и catalog

--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="inner-page">
     <!--хедер-->
     <header class="main-header">
       <nav class="main-navigation">
@@ -30,24 +33,24 @@
             <img class="hotel-image" src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
             <p class="hotel-name"><a href="hotel-page.html">Amara Resort & Spa</a></p>
             <p class="hotel-price">Гостиница от 4000 Р.</p>
-            <a class="moreinfo-button" href="#">Подробнее</a>
-            <a class="book-button" href="#">Забронировать</a>
+            <p class="more-button"><a href="#">Подробнее</a><p>
+            <p class="book-button"><a href="#">Забронировать</a></p>
             <p class="hotel-rating">Рейтинг: 8,5</p>
           </li>
           <li class="catalog-item">
             <img class="hotel-image" src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn">
             <p class="hotel-name"><a href="hotel-page.html">Desert Quail Inn</a></p>
             <p class="hotel-price">Гостиница от 3000 Р.</p>
-            <a class="moreinfo-button" href="#">Подробнее</a>
-            <a class="book-button" href="#">Забронировать</a>
+            <p class="more-button"><a href="#">Подробнее</a></p>
+            <p class="book-button"><a href="#">Забронировать</a></p>
             <p class="hotel-rating">Рейтинг: 8,9</p>
           </li>
           <li class="catalog-item">
             <img class="hotel-image" src="img/hotel-3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
             <p class="hotel-name"><a href="hotel-page.html">Villas at Poco Diablo</a></p>
             <p class="hotel-price">Гостиница от 2000 Р.</p>
-            <a class="moreinfo-button" href="#">Подробнее</a>
-            <a class="book-button" href="#">Забронировать</a>
+            <p class="more-button"><a href="#">Подробнее</a></p>
+            <p class="book-button"><a href="#">Забронировать</a></p>
             <p class="hotel-rating">Рейтинг: 9,2</p>
           </li>
         </ul>
@@ -64,7 +67,7 @@
         </ul>
       </div>
       <p class="footer-copyright">
-        <b>WEBSITE BY:</b>
+        <b class="website-by">WEBSITE BY:</b>
         <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
           <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy">
         </a>
