--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
         </ul>
       </div>
       <p class="footer-copyright">
-        <b class="website-by">WEBSITE BY:</b>
+        <b class="website-by">Website by:</b>
         <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
           <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy">
         </a>
