--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </ul>
       </div>
       <p class="footer-copyright">
-        <b class="website-by">WEBSITE BY:</b>
+        <b class="website-by">Website by:</b>
         <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
           <img class="academy-logo" src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy">
         </a>
@@ -81,19 +81,18 @@
         </p>
         <p>
           <label class="adults-text" for="numbers_of_adults">Взрослые:</label>
-          <button class="decrease" type="button" aria-label="Уменьшить количество взрослых">—</button>
+          <button class="change-button" type="button" aria-label="Уменьшить количество взрослых">—</button>
             <input class="type-form-text" type="text" id="numbers_of_adults" name="numbers_of_adults">
-          <button class="increase" type="button" aria-label="Увеличить количество взрослых">+</button>
+          <button class="change-button" type="button" aria-label="Увеличить количество взрослых">+</button>
         </p>
         <p>
           <label class="children-text" for="numbers_of_children">Дети:</label>
-          <button class="decrease" type="button" aria-label="Уменьшить количество детей">—</button>
+          <button class="change-button" type="button" aria-label="Уменьшить количество детей">—</button>
             <input class="type-form-text" type="text" id="numbers_of_children" name="numbers_of_children">
-          <button class="increase" type="button" aria-label="Увеличить количество детей">+</button>
+          <button class="change-button" type="button" aria-label="Увеличить количество детей">+</button>
         </p>
       </form>
-      <a class="popup-button" href="#" aria-label="Найти отель">Найти</a>
-      <button class="popup-close" aria-label="Закрыть окно">x</button>
+      <a class="popup-button" href="#">Найти</a>
     </section>
   </body>
 </html>
