--- a/catalog.html
+++ b/catalog.html
@@ -11,18 +11,18 @@
     <!--хедер-->
     <header class="main-header">
       <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/logo.svg" width="138" height="71" alt="Логотип SEDONA">
+        </a>
         <ul class="site-navigation">
-          <li><a href="#">Информация</a></li>
-          <li><a href="#">Фото и видео</a></li>
-          <li><a href="#">Карта штата</a></li>
-          <li><a href="#">Гостиницы</a></li>
+            <li class="menu1"><a href="#">Информация</a></li>
+            <li class="menu2"><a href="#">Фото и видео</a></li>
+            <li class="menu3"><a href="#">Карта штата</a></li>
+            <li class="menu4"><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo.svg" width="138" height="71" alt="Логотип SEDONA">
-      </a>
     </header>
-    <main>
+    <main class="container">
       <section class="hotel-form">
     <!--форма-->
       </section>
@@ -58,6 +58,7 @@
     </main>
     <!--футер-->
     <footer class="main-footer">
+    <div class="container">
       <p class="footer-hashtag">#VISITSEDONA</p>
       <div class="footer-social">
         <ul>
@@ -68,10 +69,11 @@
       </div>
       <p class="footer-copyright">
         <b class="website-by">Website by:</b>
-        <a class="footer-button" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
-          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy">
+        <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
+          <img class="academy-logo" src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy">
         </a>
       </p>
+    </div>
     </footer>
   </body>
 </html>
