--- a/catalog.html
+++ b/catalog.html
@@ -9,16 +9,16 @@
   </head>
   <body class="inner-page">
     <!--хедер-->
-    <header class="main-header">
+    <header class="main-header container">
       <nav class="main-navigation">
         <a class="main-header-logo">
           <img src="img/logo.svg" width="138" height="71" alt="Логотип SEDONA">
         </a>
         <ul class="site-navigation">
-            <li class="menu1"><a href="#">Информация</a></li>
-            <li class="menu2"><a href="#">Фото и видео</a></li>
-            <li class="menu3"><a href="#">Карта штата</a></li>
-            <li class="menu4"><a href="#">Гостиницы</a></li>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#">Фото и видео</a></li>
+            <li><a href="#">Карта штата</a></li>
+            <li><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
